# negative-space-testing

./: AGENT.md  Cargo.toml  README.md  TEST-DIARY.md
examples/: game_physics_test.rs
memory/: JOURNAL.md
src/: cathedral.rs  conservation.rs  crackle.rs  lib.rs  negative_test.rs  space_map.rs  topology.rs
tests/: integration.rs
